--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html ng-app="hyperstate" ng-controller="EntityController as controller"
-  class="{{controller.entity.class.join(' ')}}">
+  class="{{controller.entity.class? controller.entity.class.join(' ') : 'loading'}}">
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
