Avoiding UI Race Conditions
sometimes the tests would fail, because the model had updated to
indicate that loading had finished, but the rest of the model hadn’t
finished updating.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html ng-app="hyperstate" ng-controller="EntityController as controller"
-  class="{{controller.entity.class? controller.entity.class.join(' ') : 'loading'}}">
+  class="{{controller.entity.class.join(' ')}}">
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
