--- a/hyperstate-server/src/main/resources/static/index.html
+++ b/hyperstate-server/src/main/resources/static/index.html
@@ -10,7 +10,7 @@
 <title>Service Gateway</title>
 <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/3.3.6/css/bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" href="/webjars/angularjs/1.5.7/angular-csp.css" />
-<link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="/static/css/style.css">
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -99,6 +99,6 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script type="text/javascript" src="/webjars/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="/webjars/angularjs/1.5.7/angular.min.js" type="text/javascript"></script>
-    <script src="/js/entity.js" type="text/javascript"></script>
+    <script src="/static/js/entity.js" type="text/javascript"></script>
 </body>
 </html>
