--- a/hyperstate-server/src/main/resources/static/index.html
+++ b/hyperstate-server/src/main/resources/static/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
-<html ng-app="hyperstate" ng-controller="EntityController as controller"
-  class="{{controller.entity.class.join(' ')}}">
+<html id="controller" ng-app="hyperstate" ng-controller="EntityController as controller"
+  class="{{controller.entity.class.join(' ') + ' status' + controller.status}}">
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -33,7 +33,8 @@
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav" id="links">
           <li ng-repeat="link in controller.entity.links" class="{{$.inArray('self', link.rel) ? 'active' : ''}}"><a
-            href="{{link.href}}" rel="{{link.rel.join(' ')}}" ng-click="controller.processNavClick($event)">{{link.title ? link.title : link.rel[0] }}</a></li>
+            href="{{link.href}}" rel="{{link.rel.join(' ')}}" ng-click="controller.processNavClick($event)">{{link.title
+              ? link.title : link.rel[0] }}</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li ng-hide="!controller.loading" class="" id="loading"><a href="#">Loading...</a></li>
@@ -50,10 +51,11 @@
       <h2 ng-if="controller.entity.title">{{controller.entity.title}}</h2>
     </div>
     <div id="messages">
-        <div ng-if="controller.status == 404" class="alert alert-danger status404" role="alert">Not Found</div>
+      <div ng-show="controller.status === 404" class="ng-hide alert alert-danger status404" role="alert">Oops! I'm not sure what you are looking for. Whatever it is, I can't find it, sorry.</div>
+      <div ng-show="controller.status === 500" class="ng-hide alert alert-danger status500" role="alert">Sorry, I borke.</div>
     </div>
     <div id="properties">
-      <div class="row" ng-repeat="(key, value) in controller.entity.properties">
+      <div ng-repeat="(key, value) in controller.entity.properties">
         <div class="{{key}}">
           <label for="property:{{key}}">{{key}}</label>
           <div id="property:{{key}}">{{value}}</div>
@@ -94,7 +96,9 @@
       </div>
     </div>
 
-    <pre>{{controller.entity}}</pre>
+    <pre ng-if="controller.debug && controller.entity">
+        <code class="language-js" data-lang="js">{{controller.entity}}</code>
+    </pre>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="/webjars/jquery/3.1.0/jquery.min.js" type="text/javascript"></script>
