--- a/hyperstate-server/src/main/resources/static/index.html
+++ b/hyperstate-server/src/main/resources/static/index.html
@@ -8,7 +8,7 @@
 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 <base href="/">
 <title>{{appName}}</title>
-<link rel="stylesheet" type="text/css" href="/webjars/bootstrap/3.3.7/css/bootstrap.min.css" />
+<link rel="stylesheet" type="text/css" href="/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" href="/webjars/angularjs/1.5.8/angular-csp.css" />
 <link rel="stylesheet" href="/css/style.css">
 
@@ -113,7 +113,7 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="/webjars/jquery/3.1.0/jquery.min.js" type="text/javascript"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script type="text/javascript" src="/webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js"></script>
     <script src="/webjars/angularjs/1.5.8/angular.min.js" type="text/javascript"></script>
     <script src="/js/entity.js" type="text/javascript"></script>
   </div>
